--- a/fakeServer/package.json
+++ b/fakeServer/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fengari": "^0.1.4",
+    "fengari-interop": "^0.1.2",
     "luaparse": "0.2.1"
   },
   "devDependencies": {
